force-app/main/default/objects/Webinars__c/Webinars__c.object-meta.xml
<CustomObject>
    <label>Webinars</label>
    <nameField>
        <label>Webinars Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webinars</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>