force-app/main/default/objects/Webinars__c/fields/Video_url__c.field-meta.xml
<CustomField>
    <fullName>Video_url__c</fullName>
    <label>Video URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>